# 20201_sadriev

./: .gitignore
4th_sem(Java)/Interpreter/: build.gradle
4th_sem(Java)/Interpreter/src/main/java/: Cache.java  ClassToLoad.java  CommandDecreaseValue.java  CommandEndLoop.java  CommandFactory.java  CommandIncreaseValue.java  CommandInput.java  CommandMoveLeft.java  CommandMoveRight.java  CommandOutput.java  CommandStartLoop.java  Context.java  (+10 more)
4th_sem(Java)/Snake/: build.gradle
4th_sem(Java)/Torrent/: test.torrent  the art of loving.pdftest
flatmap/: CMakeLists.txt  main.cpp
flatmap/Google_tests/: FlatTests.cpp
flatmap/src/: Array.h  FlatMap.h
game_of_life_v2.0/: CMakeLists.txt  engine.cpp  engine.h  game.cpp  game.h  game_runner.cpp  game_runner.h  gamewindow.cpp  gamewindow.h  io.cpp  io.h  main.cpp  mainwindow.cpp  mainwindow.h  renderarea.cpp  renderarea.h  rulesdialog.cpp  sizedialog.cpp  sizedialog.h
prisoner/: CMakeLists.txt  change.cpp  change.h  config_provider.cpp  config_provider.h  console_interface.cpp  console_interface.h  cooperate.cpp  cooperate.h  defect.cpp  defect.h  election.cpp  election.h  endurer.cpp  endurer.h  factory.cpp  factory.h  game.cpp  game.h  game_runner.cpp  game_runner.h  io.cpp  io.h  main.cpp  majority.cpp  majority.h  mimic.cpp  mimic.h  patient.cpp  patient.h  random.cpp  random.h  strategy.h  tit_for_tat.cpp  tit_for_tat.h
prisoner/Google_tests/: CMakeLists.txt  prisoner_tests.cpp
prisoner/strategies/: change.cpp  change.h  cooperate.cpp  cooperate.h  defect.cpp  defect.h  election.cpp  election.h  majority.cpp  majority.h  mimic.cpp  mimic.h  patient.cpp  patient.h  random.cpp  random.h
unique_ptr/: unique_ptr.h
(+86 files in other folders)
